# Landspire

./: CMakeLists.txt  cardAffinities.h  cardcollectionviewer.cpp  cardcollectionviewer.h  cardfactory.cpp  cardfactory.h  cards.json  cardwidget.cpp  cardwidget.h  clientconnection.cpp  clientconnection.h  connectdialogue.cpp  connectdialogue.h  firebaseapi.cpp  firebaseapi.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  server.cpp  server.h
